--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,10 @@
 title: Planegraph's dots-n-dashes
 email: heindel@tutamail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Yet another computer scientist writing prose. 
+  Yet another computer scientist writing prose.
+  <script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>  
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://heindel.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: planegraph
