--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: graphOmath's dots-n-dashes
+title: ᚦ's dots-n-dashes
 email: heindel@tutamail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Yet another computer scientist writing prose.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://heindel.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: graphOmath
+twitter_username: thurisaz0x
 github_username:  heindel
 
 # Build settings
